[package]
name = "shared"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
async-trait = "0.1"
async-recursion = "0.3"
atty = "0.2"
contracts = { path = "../contracts" }
derivative = "2.2"
ethcontract = { path = "../../../ethcontract/ethcontract-rs/ethcontract", default-features = false }
ethcontract-mock = { path = "../../../ethcontract/ethcontract-rs/ethcontract-mock" }
futures = "0.3"
gas-estimation = { path = "../../../gp-gas-estimation/gp-gas-estimation", features = ["web3_", "tokio_"] }
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
http = "0.2.4"
itertools = "0.10"
lazy_static = "1.4.0"
lru = "0.6"
maplit = "1.0"
mockall = "0.10"
model = { path = "../model" }
num = "0.4"
num-bigint = "0.3"
once_cell = "1.8.0"
primitive-types = "0.9"
prometheus = "0.12"
prometheus-metric-storage = "0.3"
reqwest = { version = "0.11", features = ["json"] }
scopeguard = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.10", default-features = false }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tokio = { version = "1.11", features = ["macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
warp = "0.3"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev="2e2d1dfa906aa2dff6312b97d0d5ba804e9c8c6e", default-features = false }

[dev-dependencies]
regex = "1.5.4"
